[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
futures = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde-wasm-bindgen = "*"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wgpu = { version = "22.1", features = [] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { version = "1.0", features = ["full"] }
winit = { version = "0.30", features = [] }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen-futures = { version = "*" }
tokio = { version = "1.0", features = [
    "sync",
    "macros",
    "io-util",
    "rt",
    "time",
] }
web-sys = { version = "*", features = ["CustomEvent"] }
winit = { version = "0.30" }

[dev-dependencies]
# tokio = { version = "1.0", features = ["full"] }
